heyclude.txt
❌  /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h:15:1: unknown type name 'namespace'
namespace facebook::react {
         ^
❌  /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h:15:19: expected ';' after top level declarator
namespace facebook::react {
         ^
❌  /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/Props.h:17:10: 'vector' file not found
#include <vector>
         ^
❌  /Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Products/Release-iphoneos/RNScreens/Swift Compatibility Header/RNScreens-Swift.h:288:9: could not build module 'ReactCodegen'
#import <RNScreens/RNScreens.h>
        ^
▸ Compiling ExpoSharing-dummy.m
    Run script build phase '[CP-User] [Hermes] Replace Hermes for the right configuration, if needed' will be run during every build because it does not specify any outputs. To address this issue, either add output dependencies to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis" in the script phase. (in target 'hermes-engine' from project 'Pods')
    Run script build phase 'TAMTAM: Wrap codegen C++ headers' will be run during every build because it does not specify any outputs. To address this issue, either add output dependencies to the script phase, or configure it to run in every build by unchecking "Based on dependency analysis" in the script phase. (in target 'ReactCodegen' from project 'Pods')
Wrap step log (wrap.log)
  + chmod -R u+w Pods
  + chmod -R u+w ../node_modules/react-native
  + node ../scripts/wrap-cxx-headers.js
  TAMTAM: scanning Pods/Headers/Public, Pods/React-Core-prebuilt (cwd=/Users/runner/work/TAMTAM/TAMTAM/ios)
  TAMTAM: found 11876 .h/.hpp files
  TAMTAM: matched 6122 / 11876 ; patched 6122 ; skipped 0 ; errors 0
  TAMTAM: sample matched files:
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/bignum-dtoa.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/bignum.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/cached-powers.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/diy-fp.h
     /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/DoubleConversion/double-conversion/double-conversion.h
  TAMTAM: target Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/node_modules/react-native/ReactCommon/react/renderer/components/view/BaseViewEventEmitter.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  TAMTAM: target Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/react/renderer/components/lottiereactnative/EventEmitters.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
  TAMTAM: target Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/Props.h
    realpath: /Users/runner/work/TAMTAM/TAMTAM/ios/build/generated/ios/ReactCodegen/react/renderer/components/lottiereactnative/Props.h
    seen-by-walk: true
    head:
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /**
   * This code was generated by [react-native-codegen](https://www.npmjs.com/package/react-native-codegen).
  + echo '---- post-wrap check of BaseViewEventEmitter.h ----'
  ---- post-wrap check of BaseViewEventEmitter.h ----
  + head -5 Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  + readlink -f Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
  /Users/runner/work/TAMTAM/TAMTAM/node_modules/react-native/ReactCommon/react/renderer/components/view/BaseViewEventEmitter.h
Sample of patched-or-not BaseViewEventEmitter.h
  --- Pods/React-Core-prebuilt/React.xcframework/ios-arm64_x86_64-simulator/React.framework/Headers/React_Fabric/BaseViewEventEmitter.h
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  --- Pods/React-Core-prebuilt/React.xcframework/ios-arm64_x86_64-maccatalyst/React.framework/Headers/React_Fabric/BaseViewEventEmitter.h
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  --- Pods/React-Core-prebuilt/React.xcframework/Headers/React_Fabric/BaseViewEventEmitter.h
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  --- Pods/React-Core-prebuilt/React.xcframework/ios-arm64/React.framework/Headers/React_Fabric/BaseViewEventEmitter.h
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
   * This source code is licensed under the MIT license found in the
   * LICENSE file in the root directory of this source tree.
  --- Pods/Headers/Public/React-Fabric/react/renderer/components/view/BaseViewEventEmitter.h
  // TAMTAM_CXX_GUARD
  #if defined(__cplusplus)
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
  --- Pods/Headers/Public/React-Core-prebuilt/React_Fabric/BaseViewEventEmitter.h
  /*
   * Copyright (c) Meta Platforms, Inc. and affiliates.
   *
          ^
  --
  #include <react/renderer/components/lottiereactnative/Props.h>
           ^
  /Users/runner/work/TAMTAM/TAMTAM/ios/Pods/Headers/Public/ReactCodegen/react/renderer/components/lottiereactnative/Props.h:17:10: error: 'vector' file not found
  #include <vector>
           ^
  <module-includes>:2:9: note: in file included from <module-includes>:2:
  #import "/Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Products/Release-iphoneos/RNScreens/Swift Compatibility Header/RNScreens-Swift.h"
          ^
  /Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Products/Release-iphoneos/RNScreens/Swift Compatibility Header/RNScreens-Swift.h:288:9: error: could not build module 'ReactCodegen'
  #import <RNScreens/RNScreens.h>
          ^
  <unknown>:0: error: could not build Objective-C module 'RNScreens'
  SwiftDriver\ Compilation ExpoRouter normal arm64 com.apple.xcode.tools.swift.compiler (in target 'ExpoRouter' from project 'Pods')
      cd /Users/runner/work/TAMTAM/TAMTAM/ios/Pods
      builtin-Swift-Compilation -- /Applications/Xcode_26.0.1.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/swiftc -module-name ExpoRouter -O -whole-module-optimization -enforce-exclusivity\=checked @/Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Intermediates.noindex/Pods.build/Release-iphoneos/ExpoRouter.build/Objects-normal/arm64/ExpoRouter.SwiftFileList -D COCOAPODS -Xcc -fmodule-map-file\=/Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Products/Release-iphoneos/ExpoModulesCore/ExpoModulesCore.modulemap -Xcc -fmodule-map-file\=/Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Products/Release-iphoneos/RCTSwiftUI/RCTSwiftUI.modulemap -Xcc -fmodule-map-file\=/Users/runner/work/TAMTAM/TAMTAM/ios/build/Build/Products/Release-iphoneos/RNScreens/RNScreens.modulemap -Xcc -fmodule-map-file\=/Users/runner/work/TAMTAM/TAMTAM/ios/Pods/Headers/Public/ExpoModulesJSI/ExpoModulesJSI.modulemap -Xcc -fmodule-map-file\=/Users/runner/work/TAMTAM/TAMTAM/ios/Pods/Headers/Public/RNWorklets/RNWorklets.modul
  SwiftDriverJobDiscovery normal arm64 Compiling Exceptions.swift, SharingModule.swift, SharingOptions.swift (in target 'ExpoSharing' from project 'Pods')
  SwiftDriver\ Compilation\ Requirements ExpoSharing normal arm64 com.apple.xcode.tools.swift.compiler (in target 'ExpoSharing' from project 'Pods')
Error: Process completed with exit code 1.